# ProbingReflection

./: .gitignore  .ignore  AGENTS.md  ARCHITECTURE.md  README.md  SPEC.md  TEMPLATE.md  pyproject.toml  reqirements.txt
.sisyphus/drafts/: token-probe-experiment.md
scripts/: crossfamily_judge.py  full_test.sh  generate_report.py  merge_judge_results.py  quick_test.sh  run_experiments.py  run_injection_deepseek1.5b.sh  run_original_qwen1.5b.sh  run_vllm_insert_20_neg_0.1.sh
scripts/probing_reflection/: run_diagnosis.sh  run_evaluation.sh  run_extract_vectors.sh  run_inference.sh  run_linear_probe.sh  run_steering_inference.sh
src/: acc_length_rel.py  inference.py  save_insert_model.py  utils.py
src/probing_reflection/: __init__.py  __main__.py  batch_utils.py  dataset_adapters.py  evaluation.py  inference.py  judges.py  linear_probe.py  model_utils.py  prompts.py  reflection_diagnosis.py  roscoe_metrics.py  steering_inference.py  steering_vectors.py  types.py
tests/: conftest.py  test_dataset_adapters.py  test_evaluation.py  test_inference.py  test_linear_probe.py  test_reflection_diagnosis.py  test_roscoe_integration.py  test_roscoe_judge.py  test_steering_vectors.py  test_types.py
tests/fixtures/: eval_sample.jsonl  sample_reflection.jsonl
