[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "probing_reflection"
version = "0.1.0"
requires-python = ">=3.12"
description = "ProbingReflection - Probing and Modulating Self-Reflection in Language Models"
dependencies = [
    "jupyter>=1.1.1",
]

[project.scripts]
probing-reflection = "probing_reflection.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.0.0",
    "pyyaml>=6.0.3",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "datasets>=2.14.0",
    "tqdm>=4.65.0",
    "types-tqdm>=4.65.0",
    "accelerate>=0.26.0",
    "bitsandbytes>=0.43.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]
extend-exclude = ["src/probing_reflection/**/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
packages = ["probing_reflection"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
